vendor/tt-call/tests/ui/type-pointer-unexpected.stderr
error: no rules expected the token `mutable`
 --> tests/ui/type-pointer-unexpected.rs:5:17
  |
5 |     input = [{ *mutable }]
  |                 ^^^^^^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
